# CineMate

./: .gitignore  README.md  credentials.example.json  pyproject.toml
src/: main.py
src/core/: database.py
src/services/: binge_service.py  calendar_service.py  cine_service.py  movie_service.py
